Changed to use only one api that returns all

--- a/src/app/dashboard/token-row/token-row.component.less
+++ b/src/app/dashboard/token-row/token-row.component.less
@@ -14,6 +14,7 @@
             .icon {
                 border-radius: 50%;
                 margin-right: 5px;
+                overflow: hidden;
                 border: 1px solid #30363d;
                 width: 1.5em;
                 height: 1.5em;
