--- a/src/app/dashboard/address-title/address-title.component.html
+++ b/src/app/dashboard/address-title/address-title.component.html
@@ -1,4 +1,4 @@
-<div class="title" *ngIf="!!address">
+<span class="title" *ngIf="!!address">
     <span #iconContainer class="avatar"></span>
     <span>{{address}}</span>
-</div>
+</span>
