Added error handling

--- a/src/app/dashboard/address-title/address-title.component.html
+++ b/src/app/dashboard/address-title/address-title.component.html
@@ -2,3 +2,4 @@
     <span #iconContainer class="avatar"></span>
     <span>{{address}}</span>
 </span>
+<div *ngIf="hasError" class="invalid-address">Invalid Address!</div>
