--- a/src/app/dashboard/address-title/address-title.component.less
+++ b/src/app/dashboard/address-title/address-title.component.less
@@ -19,5 +19,12 @@
             width: 2em;
             height: 2em;
         }
+
+    }
+    
+    .invalid-address {
+        color: red;
+        font-size: 12px;
+        margin: 5px;
     }
 }
