--- a/src/app/dashboard/token-row/token-row.component.less
+++ b/src/app/dashboard/token-row/token-row.component.less
@@ -25,6 +25,10 @@
                 flex-direction: column;
                 flex-direction: 0 1;
                 gap: 5px;
+                .symbol {
+                    font-size: 16px;
+                    font-weight: 600;
+                }
             }
         }
 
@@ -34,6 +38,10 @@
             align-items: center;
             gap: 5px;
             flex: 0 1 65px;
+            .balance-dollar {
+                font-size: 16px;
+                font-weight: 600;
+            }
         }
     }
 }
